worked on the update API
